--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,17 @@
+:root {
+  --color-primary: #000f5d;
+  --color-primary-contrastText: #fff;
+  --color-secondary: #ffb900;
+  --color-secondary-contrastText: #000;
+  --color-background: #89cff0;
+  --color-paper-background: #dddddd;
+
+  --text-font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  --text-h1-size: 5rem;
+  --text-h2-size: 2rem;
+  --text-body-size: 1.5em;
+}
+
 * {
   box-sizing: border-box;
 }
