--- a/app/src/LandingPage.module.css
+++ b/app/src/LandingPage.module.css
@@ -7,15 +7,21 @@
   text-align: center;
   color: var(--color-primary-contrastText);
   margin-bottom: 32px;
+  font-family: var(--text-font-family);
+  font-size: var(--text-h1-size);
+  font-weight: 300;
 }
 
 .buttonsFlex {
   display: flex;
+  flex-direction: column;
   gap: 16px;
 }
 
 .overallFlex {
   background-color: var(--color-primary);
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   align-items: center;
