--- a/app/src/components/Button/Button.module.css
+++ b/app/src/components/Button/Button.module.css
@@ -1,4 +1,6 @@
 .button {
+  --button-border-width: 1px;
+
   font-size: 1.25rem;
   font-family: var(--text-font-family);
   text-transform: uppercase;
