--- a/app/src/data/Login.module.css
+++ b/app/src/data/Login.module.css
@@ -20,7 +20,7 @@
   margin-top: 16px;
 
   background-color: var(--color-background);
-  border: 1px solid var(--color-primary);
+  border: var(--button-border-width) solid var(--color-primary);
 }
 
 .logo {
