--- a/app/src/components/Button/Button.module.css
+++ b/app/src/components/Button/Button.module.css
@@ -1,17 +1,21 @@
 .button {
   --button-border-width: 1px;
 
+  min-width: 64px;
+  padding: 6px 16px;
+  border: none;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+
   font-size: 1.25rem;
   font-family: var(--text-font-family);
   text-transform: uppercase;
   font-weight: 500;
   line-height: 1.75;
   letter-spacing: 0.02857em;
-
-  min-width: 64px;
-  padding: 6px 16px;
-  border: none;
-  border-radius: 4px;
 
   cursor: pointer;
 }
