--- a/app/src/components/Button/Button.module.css
+++ b/app/src/components/Button/Button.module.css
@@ -2,7 +2,7 @@
   min-width: 64px;
   padding: 6px 16px;
   border: none;
-  border-radius: 4px;
+  border-radius: var(--border-radius);
   display: flex;
   align-items: center;
   justify-content: center;
