--- a/app/src/components/Input/Input.module.css
+++ b/app/src/components/Input/Input.module.css
@@ -12,7 +12,7 @@
   border-width: 1px;
   border-style: solid;
   border-color: var(--color-primary);
-  border-radius: 4px;
+  border-radius: var(--border-radius);
 }
 .errorOutline {
   border-color: var(--color-error);
