make --text-label-size var

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -12,6 +12,7 @@
   --text-h1-size: 5rem;
   --text-h2-size: 1.5rem;
   --text-body-size: 1.3em;
+  --text-label-size: 0.9em;
 
   --grid-border-margin-width: 20px;
   --grid-border-border-width: 5px;
