--- a/app/src/components/Select/Select.module.css
+++ b/app/src/components/Select/Select.module.css
@@ -10,7 +10,7 @@
   align-items: center;
   width: 100%;
 
-  border-width: var(--button-border-width);
+  border-width: 1px;
   border-style: solid;
   border-color: var(--color-primary);
   border-radius: var(--border-radius);
@@ -19,11 +19,10 @@
   border-color: var(--color-error);
 }
 
-.input {
+.select {
   min-width: 1em;
   flex: 1;
   padding: 6px;
-  width: 100%;
 
   border: none;
   background-color: transparent;
@@ -31,10 +30,10 @@
   font-family: var(--text-font-family);
   font-size: var(--text-body-size);
 }
-.input:focus {
+.select:focus {
   outline: none;
 }
-.inputDisabled {
+.selectDisabled {
   color: color-mix(in srgb, var(--color-background-contrastText) 50%, #888 50%);
 }
 
