--- a/app/src/components/Tooltip/Tooltip.module.css
+++ b/app/src/components/Tooltip/Tooltip.module.css
@@ -17,7 +17,7 @@
   /* TODO: make variable */
   background-color: black;
   opacity: 0.8;
-  z-index: 99;
+  z-index: var(--z-index-tooltip);
   border-radius: var(--border-radius);
   font-size: var(--text-label-size);
 }
