finished snackbar, was easier than expected lol

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -6,6 +6,7 @@
   --color-background: #89cff0;
   --color-background-contrastText: #000;
   --color-paper-background: #dddddd;
+  --color-paper-background-contrastText: #000;
   --color-error: #d32f2f;
 
   --text-font-family: "Roboto", "Helvetica", "Arial", sans-serif;
