--- a/app/src/scout/savedmatches/SavedMatches.module.css
+++ b/app/src/scout/savedmatches/SavedMatches.module.css
@@ -56,7 +56,7 @@
   --match-background-color: color-mix(
     in srgb,
     var(--color-background) 50%,
-    #fff 50%
+    #fff
   );
 
   padding: 16px;
