--- a/app/src/components/Input/Input.module.css
+++ b/app/src/components/Input/Input.module.css
@@ -36,7 +36,7 @@
   outline: none;
 }
 .inputDisabled {
-  color: color-mix(in srgb, var(--color-background-contrastText) 50%, #888 50%);
+  color: color-mix(in srgb, var(--color-background-contrastText) 50%, #888);
 }
 
 .helperText {
