--- a/app/src/components/Select/Select.module.css
+++ b/app/src/components/Select/Select.module.css
@@ -34,7 +34,7 @@
   outline: none;
 }
 .selectDisabled {
-  color: color-mix(in srgb, var(--color-background-contrastText) 50%, #888 50%);
+  color: color-mix(in srgb, var(--color-background-contrastText) 50%, #888);
 }
 
 .helperText {
