--- a/app/src/components/styles/ScoutStyles.module.css
+++ b/app/src/components/styles/ScoutStyles.module.css
@@ -12,6 +12,7 @@
   gap: 16px;
   flex: 1;
   padding: 16px;
+  height: 100%;
 }
 
 .matchInfoContainer {
@@ -64,4 +65,35 @@ button.redToggleButtonFalse {
   background-color: #fff;
   color: #ff0000;
   border: var(--button-border-width) solid #ff0000;
+}
+
+button.normalToggleButtonTrue {
+  background-color: var(--color-primary);
+  color: var(--color-primary-contrastText);
+  border: none;
+}
+button.normalToggleButtonFalse {
+  background-color: var(--color-background);
+  color: var(--color-primary);
+  border: var(--button-border-width) solid var(--color-primary);
+}
+
+.imageContainerContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.imageContainer {
+  max-width: 100%;
+  max-height: 100%;
+  position: relative;
+}
+.image {
+  width: 100%;
+  height: 100%;
+}
+.imageCounter {
+  position: absolute;
+  left: 0%;
+  bottom: 0%;
 }
