--- a/app/src/index.css
+++ b/app/src/index.css
@@ -8,6 +8,7 @@
   --color-paper-background: #dddddd;
   --color-paper-background-contrastText: #000;
   --color-error: #d32f2f;
+  --color-error-contrastText: #fff;
 
   --text-font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   --text-h1-size: 5rem;
