--- a/app/src/scout/ScoutLayout.module.css
+++ b/app/src/scout/ScoutLayout.module.css
@@ -18,3 +18,8 @@
 
   overflow-y: scroll;
 }
+
+.teleopTabHighlight {
+  background-color: var(--color-primary);
+  color: var(--color-primary-contrastText);
+}
