--- a/app/src/index.css
+++ b/app/src/index.css
@@ -3,7 +3,7 @@
   --color-primary-contrastText: #fff;
   --color-secondary: #ffb900; /* Indiana Flag Gold */
   --color-secondary-contrastText: #000;
-  --color-background: #89cff0; /* Light Blue */
+  --color-background: #f5e6a3; /* Light Yellow */
   --color-background-contrastText: #000;
   --color-paper-background: #dddddd;
   --color-paper-background-contrastText: #000;
