--- a/app/src/components/FieldImage/FieldImage.module.css
+++ b/app/src/components/FieldImage/FieldImage.module.css
@@ -1,5 +1,6 @@
 .fieldImageContainer {
   height: 100%;
+  width: 100%;
 }
 
 .fieldImageContainerError {
@@ -15,6 +16,7 @@
   max-height: 100%;
   position: relative;
   overflow: hidden;
+  container-type: inline-size;
 }
 
 .fieldImageImg {
