--- a/app/src/scout/robot/Teleop.module.css
+++ b/app/src/scout/robot/Teleop.module.css
@@ -12,3 +12,17 @@
   width: 100%;
   min-height: 0;
 }
+
+.fuelCounterRow {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+}
+
+.fuelCounterMain {
+  flex: 3;
+}
+
+.fuelCounterCycles {
+  flex: 1.5;
+}
